--- a/RxASDataSources.xcodeproj/xcshareddata/xcschemes/RxASDataSources.xcscheme
+++ b/RxASDataSources.xcodeproj/xcshareddata/xcschemes/RxASDataSources.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0920"
+   LastUpgradeVersion = "0940"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,7 +14,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3549BB201DA389CD00C63030"
+               BlueprintIdentifier = "7DAC9F3221A5D81200A15A31"
                BuildableName = "RxASDataSources.framework"
                BlueprintName = "RxASDataSources"
                ReferencedContainer = "container:RxASDataSources.xcodeproj">
@@ -26,16 +26,15 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3549BB601DA38ADB00C63030"
-               BuildableName = "RxTextureDataSourcesTests-iOS.xctest"
-               BlueprintName = "RxTextureDataSourcesTests-iOS"
+               BlueprintIdentifier = "7DAC9F3B21A5D81200A15A31"
+               BuildableName = "RxASDataSourcesTests.xctest"
+               BlueprintName = "RxASDataSourcesTests"
                ReferencedContainer = "container:RxASDataSources.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -43,7 +42,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3549BB201DA389CD00C63030"
+            BlueprintIdentifier = "7DAC9F3221A5D81200A15A31"
             BuildableName = "RxASDataSources.framework"
             BlueprintName = "RxASDataSources"
             ReferencedContainer = "container:RxASDataSources.xcodeproj">
@@ -56,7 +55,6 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -66,7 +64,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3549BB201DA389CD00C63030"
+            BlueprintIdentifier = "7DAC9F3221A5D81200A15A31"
             BuildableName = "RxASDataSources.framework"
             BlueprintName = "RxASDataSources"
             ReferencedContainer = "container:RxASDataSources.xcodeproj">
@@ -84,7 +82,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3549BB201DA389CD00C63030"
+            BlueprintIdentifier = "7DAC9F3221A5D81200A15A31"
             BuildableName = "RxASDataSources.framework"
             BlueprintName = "RxASDataSources"
             ReferencedContainer = "container:RxASDataSources.xcodeproj">
